Fix avatar image path extension

--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ theme = 'hugo-coder'
   info = "Embedded Software Engineer"
   description = "Personal website and resume"
   keywords = "blog,developer,resume"
-  avatarurl = "images/saleh_cv.jpg"
+  avatarurl = "images/saleh_cv.jpeg"
 
   favicon_32 = "/img/favicon-32x32.png"
   favicon_16 = "/img/favicon-16x16.png"
