Fix main page link

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://saleh.fi/'
 languageCode = 'en-us'
 title = 'Saleh Mehdikhani'
 theme = 'hugo-coder'
